# ChangeLog for dev-util/ccache
# Copyright 2002-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*ccache-3.0.1 (16 Jul 2010)

  16 Jul 2010; Martin Väth <martin@mvath.de>
  revbump to 3.0.1 and remove old. This is a bugfix release.

*ccache-3.0 (22 Jun 2010)

  29 Jun 2010; Martin Väth <martin@mvath.de>
  Set also CCACHE_SLOPPINESS in /etc/env.d; bump to force upgrade.
  Make CCACHE_BASEDIR warning clearer.

  22 Jun 2010; Martin Väth <martin@mvath.de>
  revbump; remove old.

*ccache-3.0-pre1 (22 May 2010)

  22 May 2010; Martin Väth <martin@mvath.de>
  revbump; remove old.
  Add zlib dependency. Put CCACHE_COMPRESS=true into env.d

  07 Apr 2010; Martin Väth <martin@mvath.de>
  Add RESTRICT="mirror"

*ccache-3.0-pre0 (03 Apr 2010)

  03 Apr 2010; Martin Väth <martin@mvath.de>
  Version bump from the portage tree; clearing previous ChangeLog.