@@ -1,5 +1,5 @@
 AUX ccache-config 1627 RMD160 b5e6a9f509130abd657fd6ec297d7fcbdb094f9d SHA1 698c3235f0685e03f346e4b155897862560974ee SHA256 d438b7d266e17bf95d6c45e619ea8d9040217e70f34eac5cf6fae010f25bb72f
 DIST ccache-3.0.1.tar.bz2 217171 RMD160 521641df0602bafb82eddb5790e9ef72cb1493ab SHA1 0f74da3a972879f078ff052922df76dea5f80f8e SHA256 9eac4d17d15fcc5ad79c84ee62c844c80aeab4407623e019fa32842ecdae0346
-EBUILD ccache-3.0.1.ebuild 2833 RMD160 cb92a5bd229c32f96f53af070d0ee32860a07ee5 SHA1 8b8fca3583012775b272c935782dd1edd9ed947c SHA256 e79d88a8d08dd0161846f2c04207f2a27613cb239ce0495130e697992323c3f7
-MISC ChangeLog 987 RMD160 ceeb3b979c1b4e050f0bcd053eaecdb170e4b6dd SHA1 6789a9ddea6dec20a431c2483bbb0b55cfa95eab SHA256 b46bf324360c5dd66f3faf8edc179b43c9ffc55f44c50a1989c3472d58bba748
-MISC metadata.xml 444 RMD160 99f5113ff8f7ebb2f7ce3e33f855bc6846b8664e SHA1 fde0b5c2db7a88911d98a24052f39c1c525b872f SHA256 4ced2aa742fbd03c11aef10aecd4c62d93fd7f2036a69626d14eb762ae2c131d
+EBUILD ccache-3.0.1.ebuild 2928 RMD160 811ee7afbfd9356145ab42cb6b67994cf66b1b75 SHA1 1f22e5cb102a88e34137d8179cc24af4fc92314d SHA256 5fc1fbb76128df1dababbf6e85a858a4f8818294d1ea5f1a09d80399475d5b2a
+MISC ChangeLog 1115 RMD160 45e920db425c0f9a35ad879769ac105990b5dba6 SHA1 54cc62e921f9f557a82df32648613f91479580a1 SHA256 6f9d97e2f9c387ad80eb1a0ceecb52cb295c0f6b673dafe08861281a6248eee6
+MISC metadata.xml 549 RMD160 c146a271a011e7110fb02fd28a93bbc9acc2f252 SHA1 8e5d8a060178767f7ca89a16c78be22bf469013f SHA256 756db2fcb47885364e2b581013ca7eb0ebc412a00fa4a81e04512bfb75808fda
