@@ -2,6 +2,9 @@
 # Copyright 2002-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  06 Aug 2010; Martin Väth <martin@mvath.de>
+  Support EPREFIX and minor bugfixes. Introduce IUSE=defaults.
+
 *ccache-3.0.1 (16 Jul 2010)
 
   16 Jul 2010; Martin Väth <martin@mvath.de>
